--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <img src="Contact Us.jpg" alt="Landing Image">
         </div>
         <div class="content-container">
-            <h2>Feel Free To</h2>
-            <h1>Contact 24/7</h1>
-            <p>we are committed to providing exceptional support to ensure a seamless experience for our valued customers .</p>
+            <h2>We are here</h2>
+            <h1>24/7 Available</h1>
+            <p>we value our customers so much we know their needs of support and we are always here for them .</p>
             <a href="tel:+18333167890" class="btn-a">Call Now</a>
 
         </div>
@@ -36,22 +36,22 @@
     <section class="card-section">
         <div class="card">
             <h2>Service</h2>
-            <p>we prioritize the security and peace of mind of our users. Our Secure Support Center is not just a service.</p>
+            <p>We get our customers concers and try our best to solve all their issues.</p>
         </div>
         <div class="card">
             <h2>Support</h2>
-            <p>we believe that exceptional customer service is the cornerstone of a great customer experience.</p>
+            <p>We provide full customer care support to our customers 24 hours a day.</p>
         </div>
         <div class="card">
             <h2>Contact</h2>
-            <p>we understand that sometimes issues may arise, and your concerns matter to us.</p>
+            <p>We know what our customers need in their support so we always fullfill it.</p>
         </div>
     </section>
 
     <!-- About Section -->
     <section class="about-section">
         <h2>About Us</h2>
-        <p>we prioritize the security and peace of mind of our users. Our Secure Support Center is not just a service.we are committed to providing exceptional support to ensure a seamless experience for our valued customers .</p>
+        <p>Our customers are really great so we try to fullfill all their support needs thats why we are here 24 hours a day 7 days a week .</p>
         <a href="tel:+18333167890" class="btn-a">Call Now</a>
     </section>
 
